--- a/main.css
+++ b/main.css
@@ -53,3 +53,46 @@ p {
 .oBgGreen {
     background-color: var(--color-green);
 }
+
+
+.cardParticipantes {
+    background-color: var(--color-green);
+    color:aliceblue;
+
+}
+
+.card-group>.card {
+    background:  var(--color-green);
+    margin: 10px;
+    }
+
+.card-group {
+    background:rgb(129, 178, 20);
+    padding: 1em;
+    margin-top: 2em;
+}
+
+.card-title {
+    color:rgb(167, 201, 231);
+    text-align: center;
+}
+
+.card-text {
+    color:aliceblue;
+    text-align: center;
+}
+
+.card>img{
+    margin:auto;
+    height: 200px !important;
+    width: 240px !important;
+    border-radius: 50% !important;
+    object-fit: cover;
+}
+
+
+.container-cards{
+    padding-top: 30px;
+    background:rgb(129, 178, 20);
+    text-align: center;
+}
