--- a/main.css
+++ b/main.css
@@ -92,9 +92,5 @@ p {
     justify-content: center;
     margin-left: auto; 
     margin-right: auto;
-}
-
-.p {
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
 }
