--- a/main.css
+++ b/main.css
@@ -99,3 +99,59 @@ p {
     width: 500PX;
     margin: 2px;
 }
+
+.card-group>.card {
+    background:  var(--color-green);
+    margin: 10px;
+    }
+
+.card-group {
+    background:rgb(129, 178, 20);
+    padding: 1em;
+    margin-top: 2em;
+}
+
+.card-title {
+    color:rgb(167, 201, 231);
+    text-align: center;
+}
+
+.card-text {
+    color:aliceblue;
+    text-align: center;
+}
+
+.card>img{
+    margin:auto;
+    height: 200px !important;
+    width: 240px !important;
+    border-radius: 50% !important;
+    object-fit: cover;
+}
+
+
+.container-cards{
+    padding-top: 30px;
+    background:rgb(129, 178, 20);
+    text-align: center;
+}
+
+footer {
+    margin: 30px;
+    background:#e3edee;
+    padding: 20px;
+}
+
+.letra-color-footer{
+color: #2d8172;
+text-align: center;
+}
+
+.fondo-footer-copy{
+    background-color:#2d8172;
+    margin: 20px;
+}
+
+.fondo-footer-copy>p{
+    color:rgb(242, 250, 242)
+}
